# knowledge-notes

./: .gitignore  CMakeLists.txt  README.md  build.bat
resource/: resources.qrc  style.qss
src/: CMakeLists.txt  main.cpp
src/app/: graph_widget.cpp  graph_widget.h  main_window.cpp  main_window.h  markdown_highlighter.cpp  markdown_highlighter.h  note_tree_model.cpp  note_tree_model.h  review_widget.cpp  review_widget.h  version_history_widget.cpp  version_history_widget.h  wiki_completer.cpp  wiki_completer.h
src/core/: database.cpp  database.h  export_service.cpp  export_service.h  flashcard.cpp  flashcard.h  import_service.cpp  import_service.h  note_repository.cpp  note_repository.h  search_result.h  version_repository.cpp  version_repository.h
